--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -386,6 +386,7 @@ jobs:
           CONFIG_TARGET_ramips=y
           CONFIG_TARGET_ramips_mt7621=y
           CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_redmi-router-ac2100=y
+          CONFIG_LIBSSH2_OPENSSL=y
           CONFIG_PACKAGE_6in4=y
           CONFIG_PACKAGE_TAR_BZIP2=y
           CONFIG_PACKAGE_TAR_GZIP=y
@@ -429,6 +430,7 @@ jobs:
           CONFIG_PACKAGE_libcap-bin-capsh-shell="/bin/sh"
           CONFIG_PACKAGE_libgmp=y
           CONFIG_PACKAGE_libiperf3=y
+          CONFIG_PACKAGE_liblua5.3=y
           CONFIG_PACKAGE_liblzma=y
           CONFIG_PACKAGE_libminiupnpc=y
           CONFIG_PACKAGE_libmount=y
@@ -438,6 +440,7 @@ jobs:
           CONFIG_PACKAGE_libreadline=y
           CONFIG_PACKAGE_libruby=y
           CONFIG_PACKAGE_libsmartcols=y
+          CONFIG_PACKAGE_libssh2=y
           CONFIG_PACKAGE_libstdcpp=y
           CONFIG_PACKAGE_libyaml=y
           CONFIG_PACKAGE_libzstd=y
@@ -475,6 +478,8 @@ jobs:
           CONFIG_PACKAGE_luci-theme-design=y
           CONFIG_PACKAGE_mount-utils=y
           CONFIG_PACKAGE_mwan3=y
+          CONFIG_PACKAGE_nmap=y
+          CONFIG_PACKAGE_nmap-full=y
           CONFIG_PACKAGE_odhcp6c=y
           CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
           CONFIG_PACKAGE_odhcpd-ipv6only=y
