--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -8,11 +8,13 @@
 name: OpenWrt-CI
 
 on:
-  schedule:
-    - cron: 0 20 * * *
-
-permissions:
-  contents: read
+  #schedule:
+  #  - cron: 0 20 * * *
+  release:
+    types: [published]
+  push:
+    branches:
+      - master
 
 jobs:
 
@@ -21,7 +23,6 @@ jobs:
     name: Build OpenWrt Firmware
 
     runs-on: ubuntu-latest
-
     steps:
       - name: Space cleanup and Initialization environment
         env:
@@ -42,6 +43,25 @@ jobs:
       - name: Checkout OpenWrt
         uses: actions/checkout@v3
 
+      - name: 第三方插件
+        run: | 
+          cd package/lean
+          rm -rf luci-theme-argon
+          git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git
+          git clone https://github.com/jerrykuku/luci-app-argon-config.git
+          git clone https://github.com/fw876/helloworld.git
+          
+      - name: OpenClash
+        run: |
+          mkdir package/luci-app-openclash
+          cd package/luci-app-openclash
+          git init
+          git remote add -f origin https://github.com/vernesong/OpenClash.git
+          git config core.sparsecheckout true
+          echo "luci-app-openclash" >> .git/info/sparse-checkout
+          git pull origin master
+          git branch --set-upstream-to=origin/master master
+
       - name: Update feeds
         run: |
           sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
@@ -49,7 +69,218 @@ jobs:
           ./scripts/feeds install -a
 
       - name: Generate configuration file
-        run: make defconfig
+        run: |
+          rm -f ./.config*
+          touch ./.config
+          cat >> .config <<EOF
+          CONFIG_TARGET_x86=y
+          CONFIG_TARGET_x86_64=y
+          CONFIG_TARGET_x86_64_DEVICE_generic=y
+          # CONFIG_FEED_helloworld is not set
+          CONFIG_LIBCURL_MBEDTLS=y
+          # CONFIG_LIBCURL_OPENSSL is not set
+          CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
+          CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
+          CONFIG_OPENVPN_openssl_ENABLE_LZ4=y
+          CONFIG_OPENVPN_openssl_ENABLE_MULTIHOME=y
+          CONFIG_OPENVPN_openssl_ENABLE_PF=y
+          CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
+          CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
+          CONFIG_PACKAGE_6in4=y
+          # CONFIG_PACKAGE_UnblockNeteaseMusic=y
+          # CONFIG_PACKAGE_alsa-lib=y
+          # CONFIG_PACKAGE_alsa-utils=y
+          # CONFIG_PACKAGE_autosamba is not set
+          CONFIG_PACKAGE_avahi-dbus-daemon=y
+          CONFIG_PACKAGE_boost=y
+          CONFIG_PACKAGE_boost-date_time=y
+          CONFIG_PACKAGE_boost-program_options=y
+          CONFIG_PACKAGE_boost-system=y
+          CONFIG_PACKAGE_dbus=y
+          CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
+          CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+          # CONFIG_DEFAULT_luci-app-dockerman is not set
+          # CONFIG_PACKAGE_python3-docker is not set
+          # CONFIG_PACKAGE_python3-dockerpty is not set
+          # CONFIG_PACKAGE_luci-lib-docker is not set
+          # CONFIG_PACKAGE_luci-app-docker is not set
+          # CONFIG_PACKAGE_docker is not set
+          # CONFIG_PACKAGE_docker-compose is not set
+          # CONFIG_PACKAGE_dockerd is not set
+          # CONFIG_DOCKER_CGROUP_OPTIONS is not set
+          # CONFIG_DOCKER_OPTIONAL_FEATURES is not set
+          # CONFIG_DOCKER_NET_OVERLAY is not set
+          # CONFIG_DOCKER_NET_MACVLAN is not set
+          # CONFIG_DOCKER_NET_TFTP is not set
+          # CONFIG_DOCKER_STO_EXT4 is not set
+          # CONFIG_DOCKER_STO_BTRFS is not set
+          CONFIG_PACKAGE_ip6tables=y
+          CONFIG_PACKAGE_ipt2socks=y
+          CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+          CONFIG_PACKAGE_iptables-mod-extra=y
+          CONFIG_PACKAGE_iptables-mod-ipopt=y
+          CONFIG_PACKAGE_iputils-arping=y
+          CONFIG_PACKAGE_ipv6helper=y
+          CONFIG_PACKAGE_kcptun-client=y
+          CONFIG_PACKAGE_kmod-ac97=y
+          CONFIG_PACKAGE_kmod-fast-classifier=y
+          CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
+          CONFIG_PACKAGE_kmod-ipt-extra=y
+          CONFIG_PACKAGE_kmod-ipt-ipopt=y
+          CONFIG_PACKAGE_kmod-ipt-nat6=y
+          CONFIG_PACKAGE_kmod-iptunnel=y
+          CONFIG_PACKAGE_kmod-nf-nat6=y
+          CONFIG_PACKAGE_kmod-regmap-core=y
+          CONFIG_PACKAGE_kmod-shortcut-fe=y
+          CONFIG_PACKAGE_kmod-sit=y
+          CONFIG_PACKAGE_kmod-sound-core=y
+          CONFIG_PACKAGE_kmod-sound-hda-codec-hdmi=y
+          CONFIG_PACKAGE_kmod-sound-hda-codec-realtek=y
+          CONFIG_PACKAGE_kmod-sound-hda-codec-via=y
+          CONFIG_PACKAGE_kmod-sound-hda-core=y
+          CONFIG_PACKAGE_kmod-sound-hda-intel=y
+          CONFIG_PACKAGE_kmod-sound-i8x0=y
+          CONFIG_PACKAGE_kmod-sound-mpu401=y
+          CONFIG_PACKAGE_kmod-sound-via82xx=y
+          CONFIG_PACKAGE_kmod-usb-audio=y
+          CONFIG_PACKAGE_kmod-usb-net-rtl8152=y
+          # CONFIG_PACKAGE_kmod-usb-net-rtl815CONFIG_PACKAGE_libavahi-client=y
+          CONFIG_PACKAGE_libavahi-dbus-support=y
+          CONFIG_PACKAGE_libcap=y
+          CONFIG_PACKAGE_libconfig=y
+          CONFIG_PACKAGE_libdaemon=y
+          CONFIG_PACKAGE_libdbus=y
+          CONFIG_PACKAGE_libevent2=y
+          CONFIG_PACKAGE_libexpat=y
+          CONFIG_PACKAGE_libiconv-full=y
+          CONFIG_PACKAGE_libltdl=y
+          CONFIG_PACKAGE_liblua5.3=y
+          # CONFIG_PACKAGE_libminiupnpc is not set
+          # CONFIG_PACKAGE_libnatpmp is not set
+          CONFIG_PACKAGE_libpopt=y
+          CONFIG_PACKAGE_libsoxr=y
+          CONFIG_PACKAGE_libwebsockets-full=y
+          # CONFIG_PACKAGE_luci-app-accesscontrol is not set
+          # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
+          CONFIG_PACKAGE_luci-app-argon-config=y
+          # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
+          # CONFIG_PACKAGE_luci-app-jd-dailybonus is not set
+          CONFIG_PACKAGE_luci-app-mwan3=y
+          # CONFIG_PACKAGE_luci-app-nlbwmon is not set
+          # CONFIG_PACKAGE_luci-app-samba is not set
+          CONFIG_PACKAGE_luci-app-serverchan=y
+          CONFIG_PACKAGE_luci-app-softethervpn=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+          CONFIG_PACKAGE_luci-app-ttyd=y
+          # CONFIG_PACKAGE_luci-app-unblockmusic is not set
+          # CONFIG_PACKAGE_luci-app-uugamebooster is not set
+          # CONFIG_PACKAGE_luci-app-vsftpd is not set
+          # CONFIG_PACKAGE_luci-app-wol is not set
+          # CONFIG_PACKAGE_luci-app-xlnetacc is not set
+          # CONFIG_PACKAGE_luci-app-zerotier is not set
+          # CONFIG_PACKAGE_zerotier is not set
+          CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
+          CONFIG_PACKAGE_luci-i18n-softethervpn-zh-cn=y
+          CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+          CONFIG_PACKAGE_luci-proto-ipv6=y
+          CONFIG_PACKAGE_luci-ssl-openssl=y
+          CONFIG_PACKAGE_luci-app-webadmin=y
+          CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
+          CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
+          # CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn is not set
+          CONFIG_PACKAGE_luci-theme-argon=y
+          CONFIG_PACKAGE_luci-theme-material=y
+          CONFIG_PACKAGE_luci-theme-netgear=y
+          CONFIG_PACKAGE_mwan3=y
+          CONFIG_PACKAGE_odhcp6c=y
+          CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
+          CONFIG_PACKAGE_odhcpd-ipv6only=y
+          CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
+          CONFIG_PACKAGE_openvpn-easy-rsa=y
+          CONFIG_PACKAGE_openvpn-openssl=y
+          # CONFIG_PACKAGE_redsocks2 is not set
+          CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
+          # CONFIG_PACKAGE_shairport-sync-openssl is not set
+          CONFIG_PACKAGE_simple-obfs-server=y
+          CONFIG_PACKAGE_softethervpn5-bridge=y
+          CONFIG_PACKAGE_softethervpn5-client=y
+          CONFIG_PACKAGE_softethervpn5-libs=y
+          CONFIG_PACKAGE_softethervpn5-server=y
+          # CONFIG_PACKAGE_strongswan is not set
+          CONFIG_PACKAGE_trojan=y
+          CONFIG_PACKAGE_ttyd=y
+          # CONFIG_PACKAGE_wsdd2 is not set
+          # CONFIG_PACKAGE_zerotier is not set
+          CONFIG_TARGET_ROOTFS_PARTSIZE=320
+          # CONFIG_UnblockNeteaseMusic_Go is not set
+          # CONFIG_VMDK_IMAGES is not set
+          CONFIG_boost-compile-visibility-hidden=y
+          CONFIG_boost-runtime-shared=y
+          CONFIG_boost-static-and-shared-libs=y
+          CONFIG_boost-variant-release=y
+          # CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL is not set
+          # CONFIG_PACKAGE_UnblockNeteaseMusicGo is not set
+          # CONFIG_PACKAGE_adbyby is not set
+          CONFIG_PACKAGE_etherwake=y
+          CONFIG_PACKAGE_iptables-mod-ipsec=y
+          CONFIG_PACKAGE_kmod-crypto-acompress=y
+          CONFIG_PACKAGE_kmod-crypto-cbc=y
+          CONFIG_PACKAGE_kmod-crypto-deflate=y
+          CONFIG_PACKAGE_kmod-crypto-des=y
+          CONFIG_PACKAGE_kmod-crypto-echainiv=y
+          CONFIG_PACKAGE_kmod-crypto-hmac=y
+          CONFIG_PACKAGE_kmod-crypto-md5=y
+          # CONFIG_PACKAGE_kmod-ip-vti is not set
+          # CONFIG_PACKAGE_kmod-ip6-vti is not set
+          CONFIG_PACKAGE_kmod-ipsec=y
+          CONFIG_PACKAGE_kmod-ipsec4=y
+          CONFIG_PACKAGE_kmod-ipsec6=y
+          CONFIG_PACKAGE_kmod-ipt-ipsec=y
+          CONFIG_PACKAGE_kmod-iptunnel6=y
+          CONFIG_PACKAGE_kmod-lib-zlib-deflate=y
+          CONFIG_PACKAGE_kmod-lib-zlib-inflate=y
+          CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
+          # CONFIG_PACKAGE_kmod-xfrm-interface is not set
+          CONFIG_PACKAGE_libgmp=y
+          # CONFIG_PACKAGE_nlbwmon is not set
+          # CONFIG_PACKAGE_samba36-server is not set
+          # CONFIG_PACKAGE_uugamebooster is not set
+          CONFIG_PACKAGE_vsftpd-alt=y
+          # CONFIG_PACKAGE_wol is not set
+          # CONFIG_PACKAGE_luci-app-qbittorrent is not set
+          # CONFIG_PACKAGE_luci-i18n-qbittorrent-zh-cn is not set
+          # CONFIG_PACKAGE_qBittorrent-static is not set
+          # CONFIG_DEFAULT_luci-app-wireguard is not set
+          # CONFIG_PACKAGE_kmod-wireguard is not set
+          # CONFIG_PACKAGE_luci-app-wireguard is not set
+          # CONFIG_PACKAGE_luci-proto-wireguard is not set
+          # CONFIG_PACKAGE_wireguard-tools is not set
+          CONFIG_SING_BOX_BUILD_CLASH_API=y
+          CONFIG_PACKAGE_luci-app-openclash=y
+          CONFIG_DEFAULT_luci-app-wireguard=y
+          CONFIG_PACKAGE_kmod-wireguard=y
+          CONFIG_PACKAGE_luci-app-wireguard=y
+          CONFIG_PACKAGE_luci-proto-wireguard=y
+          CONFIG_PACKAGE_wireguard-tools=y
+          CONFIG_PACKAGE_openconnect=y
+          CONFIG_PACKAGE_ocserv=y
+          CONFIG_PACKAGE_luci-app-ocserv=y
+          CONFIG_PACKAGE_luci-proto-openconnect=y
+          CONFIG_PACKAGE_https-dns-proxy=y
+          CONFIG_PACKAGE_luci-app-https-dns-proxy=y
+          CONFIG_PACKAGE_luci-i18n-https-dns-proxy-https-dns-proxy.pot=y
+
+          CONFIG_ALL_NONSHARED=n
+          CONFIG_ALL_KMODS=n
+          CONFIG_ALL=n
+          CONFIG_AUTOREMOVE=n
+          CONFIG_LUCI_LANG_zh_Hans=y
+          
+          EOF
+          # CONFIG_PACKAGE_xfrm is not set
+          CONFIG_VSFTPD_USE_UCI_SCRIPTS=y
+          sed -i 's/^[ \\t]*//g' ./.config
+          make defconfig
 
       - name: Download packages
         run: make download -j16
