--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -5,7 +5,7 @@
 #
 # Copyright (C) 2020 KFERMercer
 #
-name: OpenWrt-CI 
+name: OpenWrt-CI
 
 on:
   #schedule:
@@ -23,6 +23,7 @@ jobs:
     name: Build OpenWrt Firmware
 
     runs-on: ubuntu-latest
+
     steps:
       - name: Space cleanup and Initialization environment
         env:
@@ -39,10 +40,12 @@ jobs:
           sudo -E apt -y autoremove --purge
           sudo -E apt clean
           sudo -E timedatectl set-timezone "Asia/Shanghai"
-
+      - name: Check Space
+        run: |
+          df -h   
       - name: Checkout OpenWrt
         uses: actions/checkout@v3
-
+          
       - name: 第三方插件
         run: | 
           cd package/lean
@@ -61,7 +64,7 @@ jobs:
           echo "luci-app-openclash" >> .git/info/sparse-checkout
           git pull origin master
           git branch --set-upstream-to=origin/master master
-
+          
       - name: Update feeds
         run: |
           sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
@@ -282,8 +285,10 @@ jobs:
           sed -i 's/^[ \\t]*//g' ./.config
           make defconfig
 
-      - name: Download packages
-        run: make download -j16
+      - name: Make download
+        run: |
+          make download -j8
+          find dl -size -1024c -exec rm -f {} \;
 
       - name: Compile firmware
         run: |
@@ -299,9 +304,11 @@ jobs:
 
       - name: Prepare artifact
         run: |
+          mkdir -p ./artifact/firmware
           mkdir -p ./artifact/package
           mkdir -p ./artifact/buildinfo
           rm -rf $(find ./bin/targets/ -type d -name "packages")
+          cp -rf $(find ./bin/targets/ -type f) ./artifact/firmware/
           cp -rf $(find ./bin/packages/ -type f -name "*.ipk") ./artifact/package/
           cp -rf $(find ./bin/targets/ -type f -name "*.buildinfo" -o -name "*.manifest") ./artifact/buildinfo/
 
