--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -54,16 +54,16 @@ jobs:
           git clone https://github.com/jerrykuku/luci-app-argon-config.git
           git clone https://github.com/fw876/helloworld.git
           
-      #- name: OpenClash
-      #  run: |
-      #    mkdir package/luci-app-openclash
-      #    cd package/luci-app-openclash
-      #    git init
-      #    git remote add -f origin https://github.com/vernesong/OpenClash.git
-      #    git config core.sparsecheckout true
-      #    echo "luci-app-openclash" >> .git/info/sparse-checkout
-      #    git pull origin master
-      #    git branch --set-upstream-to=origin/master master
+      - name: OpenClash
+        run: |
+          mkdir package/luci-app-openclash
+          cd package/luci-app-openclash
+          git init
+          git remote add -f origin https://github.com/vernesong/OpenClash.git
+          git config core.sparsecheckout true
+          echo "luci-app-openclash" >> .git/info/sparse-checkout
+          git pull origin master
+          git branch --set-upstream-to=origin/master master
           
       - name: Update feeds
         run: |
@@ -259,7 +259,7 @@ jobs:
           # CONFIG_PACKAGE_luci-proto-wireguard is not set
           # CONFIG_PACKAGE_wireguard-tools is not set
           CONFIG_SING_BOX_BUILD_CLASH_API=y
-          # CONFIG_PACKAGE_luci-app-openclash=y
+          CONFIG_PACKAGE_luci-app-openclash=y
           CONFIG_DEFAULT_luci-app-wireguard=y
           CONFIG_PACKAGE_kmod-wireguard=y
           CONFIG_PACKAGE_luci-app-wireguard=y
