--- a/package/kernel/mt76/Makefile
+++ b/package/kernel/mt76/Makefile
@@ -18,6 +18,7 @@ else
 PKG_SOURCE_DATE:=2023-08-14
 PKG_SOURCE_VERSION:=b14c2351ddb8601c322576d84029e463d456caef
 PKG_MIRROR_HASH:=62b5e157ad525424b6857e77ed373e8d39d03af71b057f8b309d8b293d6eac5f
+PATCH_DIR:=./patches
 endif
 
 PKG_MAINTAINER:=Felix Fietkau <nbd@nbd.name>
