--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -47,6 +47,124 @@ jobs:
           sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
+          # 编译x64固件：
+          # cat >> .config <<EOF
+          # CONFIG_TARGET_x86=y
+          # CONFIG_TARGET_x86_64=y
+          # CONFIG_TARGET_x86_64_Generic=y
+          # EOF
+
+          # 固件压缩：
+          # cat >> .config <<EOF
+          # CONFIG_TARGET_IMAGES_GZIP=y
+          # EOF
+
+          # 编译UEFI固件：
+          # cat >> .config <<EOF
+          # CONFIG_EFI_IMAGES=y
+          # EOF
+
+          # IPv6支持：
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+          # CONFIG_PACKAGE_ipv6helper=y
+          # EOF
+
+          # 多文件系统支持：
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_kmod-fs-nfs=y
+          # CONFIG_PACKAGE_kmod-fs-nfs-common=y
+          # CONFIG_PACKAGE_kmod-fs-nfs-v3=y
+          # CONFIG_PACKAGE_kmod-fs-nfs-v4=y
+          # CONFIG_PACKAGE_kmod-fs-nfs-ntfs=y
+          # CONFIG_PACKAGE_kmod-fs-nfs-squashfs=y
+          # EOF
+
+          # UAB3.0支持：
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_kmod-usb-ohci=y
+          # CONFIG_PACKAGE_kmod-usb-ohci-pci=y
+          # CONFIG_PACKAGE_kmod-usb2=y
+          # CONFIG_PACKAGE_kmod-usb2-pci=y
+          # CONFIG_PACKAGE_kmod-usb3=y
+          # EOF
+
+          # 常用LuCI插件选择：
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_luci-app-accesscontrol=y
+          # CONFIG_PACKAGE_luci-app-adblock=y
+          # CONFIG_PACKAGE_luci-app-adbyby-plus=y
+          # CONFIG_PACKAGE_luci-app-adbyby=y
+          # CONFIG_PACKAGE_luci-app-adkill=y
+          # CONFIG_PACKAGE_luci-app-clamav=y
+          # CONFIG_PACKAGE_luci-app-simple-adblock=y
+          # CONFIG_PACKAGE_luci-app-koolproxy=y
+          # CONFIG_PACKAGE_luci-app-adguardhome=y
+          # CONFIG_PACKAGE_luci-app-meshwizard=y
+          # CONFIG_PACKAGE_luci-app-wireless-regdb=y
+          # CONFIG_PACKAGE_luci-app-advanced-reboot=y
+          # CONFIG_PACKAGE_luci-app-arpbind=y
+          # CONFIG_PACKAGE_luci-app-attendedsysupgrade=y
+          # CONFIG_PACKAGE_luci-app-asterisk=y
+          # CONFIG_PACKAGE_luci-app-autoreboot=y
+          # CONFIG_PACKAGE_luci-app-commands=y
+          # CONFIG_PACKAGE_luci-app-cshark=y
+          # CONFIG_PACKAGE_luci-app-ddns=y
+          # CONFIG_PACKAGE_luci-app-familycloud=y
+          # CONFIG_PACKAGE_luci-app-firewall=y
+          # CONFIG_PACKAGE_luci-app-guest-wifi=y
+          # CONFIG_PACKAGE_luci-app-hnet=y
+          # CONFIG_PACKAGE_luci-app-meshwizard=y
+          # CONFIG_PACKAGE_luci-app-nlbwmon=y
+          # CONFIG_PACKAGE_luci-app-p910nd=y
+          # CONFIG_PACKAGE_luci-app-ramfree=y
+          # CONFIG_PACKAGE_luci-app-samba=y
+          # CONFIG_PACKAGE_luci-app-samba4=y
+          # CONFIG_PACKAGE_luci-app-sfe=y
+          # CONFIG_PACKAGE_luci-app-S-S R-plus=y
+          # CONFIG_PACKAGE_luci-app-S-S R-pro=y
+          # CONFIG_PACKAGE_luci-app-syncdial=y
+          # CONFIG_PACKAGE_luci-app-ttyd=y
+          # CONFIG_PACKAGE_luci-app-travelmate=y
+          # CONFIG_PACKAGE_luci-app-udpxy=y
+          # CONFIG_PACKAGE_luci-app-unblockmusic=y
+          # CONFIG_PACKAGE_luci-app-vlmcsd=y
+          # CONFIG_PACKAGE_luci-app-watchcat=y
+          # CONFIG_PACKAGE_luci-app-webadmin=y
+          # CONFIG_PACKAGE_luci-app-wifischedule=y
+          # CONFIG_PACKAGE_luci-app-wireguard=y
+          # CONFIG_PACKAGE_luci-app-wol=y
+          # CONFIG_PACKAGE_luci-app-wrtbwmon=y
+          # CONFIG_PACKAGE_luci-app-xlnetacc=y
+          # EOF
+
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_luci-theme-argon=y
+          # CONFIG_PACKAGE_luci-theme-netgear=y
+          # EOF
+
+          # 常用软件包：
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_curl=y
+          # CONFIG_PACKAGE_htop=y
+          # CONFIG_PACKAGE_navo=y
+          # CONFIG_PACKAGE_screen=y
+          # CONFIG_PACKAGE_tree=y
+          # CONFIG_PACKAGE_vim-fuller=y
+          # CONFIG_PACKAGE_wget=y
+          # EOF
+
+          # 取消编译VMware镜像以及镜像填充（不要删除被缩进的注释符号）：
+          # cat >> .config <<EOF
+          # # CONFIG_TARGET_IMAGES_PAD is not set
+          # # # CONFIG_VMDK_IMAGES is not set
+          # EOF
+
+          #
+          # =================================固件定制部分结束=======================
+          #
+
+          sed -i 's/^[ \t]*//g' ./.config
 
       - name: Generate configuration file
         run: make defconfig
