Update: workflow_dispatch

--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -15,6 +15,13 @@ on:
   #   - cron: 0 20 * * *
   # release:
   #   types: [published]
+  repository_dispatch:
+  workflow_dispatch:
+    inputs:
+      ssh:
+        description: 'SSH connection to Actions'
+        required: false
+        default: 'false'
 
 permissions:
   contents: read
