Update: config file

--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -23,8 +23,8 @@ on:
         required: false
         default: 'false'
 
-permissions:
-  contents: read
+# permissions:
+#   contents: read
 
 jobs:
 
@@ -83,11 +83,11 @@ jobs:
           # CONFIG_KERNEL_BUILD_DOMAIN="Azure"
 
           # 系统软件
-          CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
-          CONFIG_PACKAGE_iptables-mod-iprange=y
-          CONFIG_PACKAGE_iptables-mod-socket=y
-          CONFIG_PACKAGE_iptables-mod-extra=y
-          CONFIG_PACKAGE_iptables-mod-tproxy=y
+          # CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+          # CONFIG_PACKAGE_iptables-mod-iprange=y
+          # CONFIG_PACKAGE_iptables-mod-socket=y
+          # CONFIG_PACKAGE_iptables-mod-extra=y
+          # CONFIG_PACKAGE_iptables-mod-tproxy=y
 
           # 主题
           CONFIG_PACKAGE_luci-theme-argon=y
