--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -65,47 +65,47 @@ jobs:
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
-      # - name: Generate configuration file
-      #   run: make defconfig
-
       - name: Generate configuration file
-        run: |
-          rm -f ./.config*
-          touch ./.config
+        run: make defconfig
 
-          #
-          # 在 cat >> .config <<EOF 到 EOF 之间粘贴你的编译配置, 需注意缩进关系
-          # 例如:
+      # - name: Generate configuration file
+      #   run: |
+      #     rm -f ./.config*
+      #     touch ./.config
 
-          cat >> .config <<EOF
-          # CONFIG_TARGET_IMAGES_GZIP=y
-          # CONFIG_KERNEL_BUILD_USER="OpenWrt-CI"
-          # CONFIG_KERNEL_BUILD_DOMAIN="Azure"
+      #     #
+      #     # 在 cat >> .config <<EOF 到 EOF 之间粘贴你的编译配置, 需注意缩进关系
+      #     # 例如:
 
-          # 系统软件
-          # CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
-          # CONFIG_PACKAGE_iptables-mod-iprange=y
-          # CONFIG_PACKAGE_iptables-mod-socket=y
-          # CONFIG_PACKAGE_iptables-mod-extra=y
-          # CONFIG_PACKAGE_iptables-mod-tproxy=y
+      #     cat >> .config <<EOF
+      #     # CONFIG_TARGET_IMAGES_GZIP=y
+      #     # CONFIG_KERNEL_BUILD_USER="OpenWrt-CI"
+      #     # CONFIG_KERNEL_BUILD_DOMAIN="Azure"
 
-          # 主题
-          CONFIG_PACKAGE_luci-theme-argon=y
-          CONFIG_PACKAGE_luci-app-argon-config=y
-          CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
+      #     # 系统软件
+      #     # CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+      #     # CONFIG_PACKAGE_iptables-mod-iprange=y
+      #     # CONFIG_PACKAGE_iptables-mod-socket=y
+      #     # CONFIG_PACKAGE_iptables-mod-extra=y
+      #     # CONFIG_PACKAGE_iptables-mod-tproxy=y
 
-          # SSR
-          CONFIG_PACKAGE_luci-app-passwall2=y
-          CONFIG_PACKAGE_luci-i18n-passwall2-zh-cn
+      #     # 主题
+      #     CONFIG_PACKAGE_luci-theme-argon=y
+      #     CONFIG_PACKAGE_luci-app-argon-config=y
+      #     CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
 
-          EOF
+      #     # SSR
+      #     CONFIG_PACKAGE_luci-app-passwall2=y
+      #     CONFIG_PACKAGE_luci-i18n-passwall2-zh-cn
 
-          #
-          # ===============================================================
-          # 
+      #     EOF
 
-          sed -i 's/^[ \t]*//g' ./.config
-          make defconfig
+      #     #
+      #     # ===============================================================
+      #     # 
+
+      #     sed -i 's/^[ \t]*//g' ./.config
+      #     make defconfig
 
       - name: Download packages
         run: make download -j16
