--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -72,19 +72,19 @@ jobs:
         run: |
           rm -f ./.config*
           touch ./.config
-          # cat >> .config <<EOF
-          # CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
-          # CONFIG_PACKAGE_iptables-mod-iprange=y
-          # CONFIG_PACKAGE_iptables-mod-socket=y
-          # CONFIG_PACKAGE_iptables-mod-extra=y
-          # CONFIG_PACKAGE_iptables-mod-tproxy=y
-          # CONFIG_PACKAGE_luci-theme-argon=y
-          # CONFIG_PACKAGE_luci-app-argon-config=y
-          # CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
-          # CONFIG_PACKAGE_luci-app-passwall2=y
-          # CONFIG_PACKAGE_luci-i18n-passwall2-zh-cn
-          # EOF
-          # sed -i 's/^[ \t]*//g' ./.config
+          cat >> .config <<EOF
+          CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+          CONFIG_PACKAGE_iptables-mod-iprange=y
+          CONFIG_PACKAGE_iptables-mod-socket=y
+          CONFIG_PACKAGE_iptables-mod-extra=y
+          CONFIG_PACKAGE_iptables-mod-tproxy=y
+          CONFIG_PACKAGE_luci-theme-argon=y
+          CONFIG_PACKAGE_luci-app-argon-config=y
+          CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
+          CONFIG_PACKAGE_luci-app-passwall2=y
+          CONFIG_PACKAGE_luci-i18n-passwall2-zh-cn
+          EOF
+          sed -i 's/^[ \t]*//g' ./.config
           make defconfig
 
       - name: Download packages
