--- a/.github/workflows/Vx6XJDr.yml
+++ b/.github/workflows/Vx6XJDr.yml
@@ -158,13 +158,13 @@ jobs:
           # CONFIG_PACKAGE_luci-app-wireguard=y
           CONFIG_PACKAGE_luci-app-wrtbwmon=y
           CONFIG_PACKAGE_luci-app-netdata=y
-          CONFIG_PACKAGE_luci-app-unblockneteasemusic-mini=n
-          CONFIG_PACKAGE_luci-app-unblockmusic=y
+          # CONFIG_PACKAGE_luci-app-unblockneteasemusic-mini=n
+          # CONFIG_PACKAGE_luci-app-unblockmusic=y
           EOF
           # BBR男寝浪:
-          cat >> .config <<EOF
-          CONFIG_PACKAGE_kmod-tcp-bbr-nanqinlang=y
-          EOF
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_kmod-tcp-bbr-nanqinlang=y
+          # EOF
           # LuCI主题:
           cat >> .config <<EOF
           # CONFIG_PACKAGE_luci-theme-argon=y
@@ -184,9 +184,9 @@ jobs:
           CONFIG_PACKAGE_luci-app-airplay2=y
           EOF
           # dailyBonus
-          cat >> .config <<EOF
-          CONFIG_PACKAGE_luci-app-jd-dailybonus=y
-          EOF
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_luci-app-jd-dailybonus=y
+          # EOF
           # SQM
           cat >> .config <<EOF
           CONFIG_PACKAGE_luci-app-sqm=y
