--- a/.github/workflows/Vx6XJDr.yml
+++ b/.github/workflows/Vx6XJDr.yml
@@ -172,17 +172,17 @@ jobs:
           CONFIG_PACKAGE_luci-theme-material=y
           EOF
           # PCHifi音乐转盘遥控
-          cat >> .config <<EOF
-          CONFIG_PACKAGE_luci-app-music-remote-center=y
-          EOF
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_luci-app-music-remote-center=y
+          # EOF
           # dnsforwarder
           cat >> .config <<EOF
           CONFIG_PACKAGE_dnsforwarder=y
           EOF
           # 苹果投音频到路由器airplay2
-          cat >> .config <<EOF
-          CONFIG_PACKAGE_luci-app-airplay2=y
-          EOF
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_luci-app-airplay2=y
+          # EOF
           # dailyBonus
           # cat >> .config <<EOF
           # CONFIG_PACKAGE_luci-app-jd-dailybonus=y
