--- a/.github/workflows/Vx6XJDr.yml
+++ b/.github/workflows/Vx6XJDr.yml
@@ -162,9 +162,9 @@ jobs:
           # CONFIG_PACKAGE_luci-app-unblockmusic=y
           EOF
           # BBR男寝浪:
-          # cat >> .config <<EOF
-          # CONFIG_PACKAGE_kmod-tcp-bbr-nanqinlang=y
-          # EOF
+          cat >> .config <<EOF
+          CONFIG_PACKAGE_kmod-tcp-bbr-nanqinlang=y
+          EOF
           # LuCI主题:
           cat >> .config <<EOF
           # CONFIG_PACKAGE_luci-theme-argon=y
