--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -6,7 +6,11 @@
 # Copyright (C) 2020 KFERMercer
 #
 name: OpenWrt
-
+on:
+  push:
+    branches:
+    - main
+    - release/*
 on:
   schedule:
     - cron: 0 20 * * *
