--- a/.github/openwrt-ci.yml
+++ b/.github/openwrt-ci.yml
@@ -74,7 +74,7 @@ jobs:
 
           cat >> .config <<EOF
           CONFIG_TARGET_IMAGES_GZIP=y
-          CONFIG_KERNEL_BUILD_USER="OpenWrt-CI"
+          CONFIG_KERNEL_BUILD_USER="OpenWrt"
           CONFIG_KERNEL_BUILD_DOMAIN="Azure"
           EOF
 
