--- a/.github/workflows/Vx6XJDr.yml
+++ b/.github/workflows/Vx6XJDr.yml
@@ -51,14 +51,14 @@ jobs:
           # ln -s /mnt/openwrt/dl ./dl
           # ln -s /mnt/openwrt/feeds ./feeds
           # ln -s /mnt/openwrt/staging_dir ./staging_dir
-          df -h
+          # df -h
 
       - name: Checkout OpenWrt
         uses: actions/checkout@v3
 
       - name: Update feeds
         run: |
-          # sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
+          sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
           
