--- a/.github/workflows/openwrt-ci_with_cache(node20).yml
+++ b/.github/workflows/openwrt-ci_with_cache(node20).yml
@@ -8,9 +8,9 @@
 name: OpenWrt-CI_with_cache(node20)
 
 on:
-  # push:
-  #   branches: 
-  #     - master
+  push:
+    branches: 
+       - master
   # schedule:
   #   - cron: 0 20 * * *
   # release:
