--- a/.github/workflows/openwrt-ci_with_cache(node20).yml
+++ b/.github/workflows/openwrt-ci_with_cache(node20).yml
@@ -11,8 +11,8 @@ on:
   push:
     branches: 
        - master
-  # schedule:
-  #   - cron: 0 20 * * *
+  schedule:
+       - cron: 0 20 * * *
   # release:
   #   types: [published]
   repository_dispatch:
