--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -6,13 +6,13 @@
 # 
 # <https://github.com/KFERMercer/OpenWrt-CI>
 #
-
 name: 第一次X86
 
 on:
-  # push:
-  # branches: 
-  #    - master
+  push:
+    branches: 
+      - master
+
   schedule:
     - cron: 0 20 * * *
   release:
