--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -6,13 +6,13 @@
 # 
 # <https://github.com/KFERMercer/OpenWrt-CI>
 #
-name: 第一次X86
+
+name: OpenWrt-CI
 
 on:
   push:
     branches: 
       - master
-
   schedule:
     - cron: 0 20 * * *
   release:
@@ -55,16 +55,6 @@ jobs:
           sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
-
-      - name: 自定义插件
-        run:
-          cd package
-          mkdir openwrt-packages
-          cd openwrt-packages
-          git clone https://github.com/linkease/istore.git
-          git clone https://github.com/xiaorouji/openwrt-passwall.git
-          git clone https://github.com/fw876/helloworld.git
-          git clone https://github.com/jerrykuku/luci-theme-argon.git
 
       - name: Update feeds
         run: |
@@ -175,16 +165,12 @@ jobs:
           CONFIG_PACKAGE_luci-app-webadmin=y
           CONFIG_PACKAGE_luci-app-wireguard=y
           CONFIG_PACKAGE_luci-app-wrtbwmon=y
-          CONFIG_PACKAGE_istore=y
-          CONFIG_PACKAGE_openwrt-passwall=y
-          CONFIG_PACKAGE_helloworld=y
           EOF
 
           # LuCI主题:
           cat >> .config <<EOF
           CONFIG_PACKAGE_luci-theme-argon=y
           CONFIG_PACKAGE_luci-theme-netgear=y
-          CONFIG_PACKAGE_luci-theme-argon=y
           EOF
 
           # 常用软件包:
@@ -204,9 +190,9 @@ jobs:
           # CONFIG_VMDK_IMAGES is not set
           EOF
 
-          # 
+          
           # ========================固件定制部分结束========================
-          # 
+          
 
           sed -i 's/^[ \t]*//g' ./.config
           make defconfig
