--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -22,8 +22,8 @@ on:
 
 
 #release发布触发开始编译(只是一个触发条件,不会发布的,又麻烦,没卵用,不用研究)
- release:
-   types: published
+#  release:
+#    types: published
 
 
 #定时触发开始编译(utc時間)
