--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -42,8 +42,7 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Update feeds
-        run: |
-          #sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
+        run: |          
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
@@ -65,6 +64,8 @@ jobs:
           # CONFIG_PACKAGE_autosamba is not set
           # CONFIG_PACKAGE_luci-app-xlnetacc is not set
           # CONFIG_PACKAGE_luci-app-vsftpd is not set
+          CONFIG_PACKAGE_luci-app-passwall2=y
+          CONFIG_PACKAGE_
           CONFIG_PACKAGE_luci-app-netdata=y
           # CONFIG_PACKAGE_luci-app-frpc is not set
           # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
