--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -65,8 +65,25 @@ jobs:
           # CONFIG_PACKAGE_autosamba is not set
           # CONFIG_PACKAGE_luci-app-xlnetacc is not set
           # CONFIG_PACKAGE_luci-app-vsftpd is not set
+          #CONFIG_PACKAGE_hysteria=y
+          CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_IPv6_Nat=y
+          CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_NaiveProxy=y
           CONFIG_PACKAGE_luci-app-passwall2=y
-          CONFIG_PACKAGE_
+          CONFIG_PACKAGE_luci-i18n-passwall2-zh-cn=y
+          CONFIG_PACKAGE_sing-box=y
+          CONFIG_PACKAGE_luci-app-passwall2_Iptables_Transparent_Proxy=y
+          CONFIG_SING_BOX_WITH_ACME=y
+	        CONFIG_SING_BOX_WITH_CLASH_API=y
+	        CONFIG_SING_BOX_WITH_DHCP=y
+	        CONFIG_SING_BOX_WITH_ECH=y
+	        CONFIG_SING_BOX_WITH_GRPC=y
+	        CONFIG_SING_BOX_WITH_GVISOR=y
+	        CONFIG_SING_BOX_WITH_QUIC=y
+	        CONFIG_SING_BOX_WITH_REALITY_SERVER=y
+	        CONFIG_SING_BOX_WITH_UTLS=y
+	        CONFIG_SING_BOX_WITH_V2RAY_API=y
+	        CONFIG_SING_BOX_WITH_WIREGUARD=y
+          CONFIG_PACKAGE_naiveproxy=y
           CONFIG_PACKAGE_luci-app-netdata=y
           # CONFIG_PACKAGE_luci-app-frpc is not set
           # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
